--- a/examples/mario-bros-overworld/mario-bros.html
+++ b/examples/mario-bros-overworld/mario-bros.html
@@ -11,59 +11,56 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
 
     <!-- Band.JS Files -->
-    <script src="../../src/band.js"></script>
-    <script src="../../src/instrument-packs/noises.js"></script>
-    <script src="../../src/instrument-packs/oscillators.js"></script>
-    <script src="../../src/rhythm-packs/north-american.js"></script>
-    <script src="../../src/tuning-packs/equal-temperament.js"></script>
+    <script src="../../build/band.js"></script>
 
     <!-- App Files -->
     <script src="app.js"></script>
 </head>
 <body ng-controller="AppController">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12 text-center">
-                <h3><strong>Super Mario Bros Overworld Theme</strong></h3>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <h3><strong>Super Mario Bros Overworld Theme</strong></h3>
         </div>
-        <div class="row" ng-cloak>
-            <div class="col-lg-10 col-lg-offset-1">
-                <div class="row timing">
-                    <div class="col-xs-12 text-center">
-                        <span class="music-time">{{currentSeconds|musicTime}}</span>
-                        <input ng-mousedown="movingTime()" ng-mouseup="updateTime()" type="range" max="{{totalSeconds}}" ng-model="currentSeconds">
-                        <span class="music-time">{{totalSeconds|musicTime}}</span>
-                    </div>
+    </div>
+    <div class="row" ng-cloak>
+        <div class="col-lg-10 col-lg-offset-1">
+            <div class="row timing">
+                <div class="col-xs-12 text-center">
+                    <span class="music-time">{{currentSeconds|musicTime}}</span>
+                    <input ng-mousedown="movingTime()" ng-mouseup="updateTime()" type="range" max="{{totalSeconds}}" ng-model="currentSeconds">
+                    <span class="music-time">{{totalSeconds|musicTime}}</span>
                 </div>
-                <div class="row cover-art">
-                    <div class="col-xs-12 text-center">
-                        <img src="http://i.imgur.com/oc4m2Z7.png" alt="Super Mario Bros">
-                    </div>
+            </div>
+            <div class="row cover-art">
+                <div class="col-xs-12 text-center">
+                    <img src="http://i.imgur.com/oc4m2Z7.png" alt="Super Mario Bros">
                 </div>
-                <div class="row controls">
-                    <div class="col-xs-12 text-center">
-                        <div class="btn-group">
-                            <button ng-if="! playing || paused" ng-click="play()" class="btn btn-default"><i class="glyphicon glyphicon-play"></i></button>
-                            <button ng-if="! paused && playing" ng-click="pause()" class="btn btn-default"><i class="glyphicon glyphicon-pause"></i></button>
-                            <button ng-click="stop()" class="btn btn-default"><i class="glyphicon glyphicon-stop"></i></button>
-                            <button class="btn btn-default" ng-model="mute" btn-checkbox><i class="glyphicon glyphicon-volume-off"></i></button>
-                            <button class="btn btn-default" ng-model="loop" btn-checkbox><i class="glyphicon glyphicon-repeat"></i></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="row volume">
-                    <div class="col-xs-12 text-center">
-                        <input ng-disabled="muted" type="range" ng-model="volume">
+            </div>
+            <div class="row controls">
+                <div class="col-xs-12 text-center">
+                    <div class="btn-group">
+                        <button ng-if="! playing || paused" ng-click="play()" class="btn btn-default"><i class="glyphicon glyphicon-play"></i></button>
+                        <button ng-if="! paused && playing" ng-click="pause()" class="btn btn-default"><i class="glyphicon glyphicon-pause"></i></button>
+                        <button ng-click="stop()" class="btn btn-default"><i class="glyphicon glyphicon-stop"></i></button>
+                        <button class="btn btn-default" ng-model="mute" btn-checkbox><i class="glyphicon glyphicon-volume-off"></i></button>
+                        <button class="btn btn-default" ng-model="loop" btn-checkbox><i class="glyphicon glyphicon-repeat"></i></button>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 text-center">
-                <h6>Only works in latest chrome or safari!</h6>
+            <div class="row volume">
+                <div class="col-xs-12 text-center">
+                    <input ng-disabled="muted" type="range" ng-model="volume">
+                </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <h5>Created by <a href="https://github.com/meenie" target="_blank">Cody Lundquist</a> using <a href="https://github.com/meenie/band.js" target="_blank">Band.js</a></h5>
+            <h6>Only works in latest chrome or safari!</h6>
+        </div>
+    </div>
+</div>
 </body>
 </html>
