Finishing off stuff.

--- a/examples/mario-bros-overworld/mario-bros.html
+++ b/examples/mario-bros-overworld/mario-bros.html
@@ -11,7 +11,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
 
     <!-- Band.JS Files -->
-    <script src="../../build/band.js"></script>
+    <script src="../../dist/band.min.js"></script>
 
     <!-- App Files -->
     <script src="app.js"></script>
