real time notification of playing notes with pith and duration

--- a/examples/vanilla-js/index.html
+++ b/examples/vanilla-js/index.html
@@ -13,5 +13,10 @@
 </head>
 <body>
     <button onClick="window.init()">init</button><button onClick="window.play()">play</button>
+    <div id="output">
+        <div class="start"></div>
+        <div class="duration"></div>
+        <div class="pitch"></div>
+    </div>
 </body>
 </html>
